--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "itss_japan",
+    "database": "itss-japan",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "logging": false
