--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "itss-japan",
+    "password": "thaihotboy1",
+    "database": "itss_japan",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "logging": false
